--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="assets/icon.ico">
+    <link rel="icon" href="/icon.ico">
 </head>
 <body>
     <nav id="nav">
@@ -39,7 +39,7 @@
          <div class="left-heading">
              <h3>Facebook helps you connect and share with the people in your life.</h3>
              <div class="image">
-                 <img src="./assets/bg.webp" alt="">
+                 <img src="./bg.webp" alt="">
              </div>
          </div>
         </div>
