--- a/mainpage.html
+++ b/mainpage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook Clone</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="assets/icon.ico">
+    <link rel="icon" href="/icon.ico">
 </head>
 <body>
     <h1> Welcome to My Facebook Clone Page....</h1>
